<resources>
    <string name="app_name">shutter_mvp</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_manage_channels">Manage Channels</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_in_text">Sign in and get access to your shutters from your phone.</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="prompt_email_address">Enter you email address</string>
    <string name="prompt_password">Enter a password</string>
    <string name="action_login">Login</string>
    <string name="dont_have_an_account">I don’t have an account yet</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_text">Sign up and start controlling your shutters from your phone.</string>

    <string name="password_too_short">Password is too short!</string>
    <string name="invalid_email_address">Invalid email address!</string>
    <string name="invalid_password">Invalid password!</string>
    <string name="error_during_login">Error during login!</string>
    <string name="network_error">Network error!</string>
    <string name="internal_server_error">Internal server error!</string>
    <string name="different_passwords">The passwords are not the same!</string>
    <string name="email_address_taken">Email address already taken!</string>
    <string name="required_field">Required field!</string>

    <string name="password_again">Password again</string>
    <string name="prompt_password_again">Enter the same password again</string>

    <string name="device_not_found">Device not found...</string>
    <string name="retry">Retry</string>
    <string name="searching_for_devices">Searching for devices…</string>
    <string name="searching_devices_text">Please make sure that both this device and the controller hub are on the same\n Wi-Fi network.</string>

    <string name="automation">Automation</string>
    <string name="add_new">Add new</string>

    <string name="ready_to_use">Ready to use</string>
    <string name="shutter_center">Shutter center</string>
    <string name="unGrouped">Ungrouped</string>
    <string name="edit_rooms">Edit Rooms</string>

    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="manage_channels">Manage channels</string>

    <string name="add_new_channel">Add New Channel</string>
    <string name="saved_shutters">Saved shutters</string>
    <string name="saved_shutters_text">Tap on the ‘Add New’ button to set up\nnew shutters</string>

    <string name="delete">Delete</string>
    <string name="delete_channel_title">Are you sure you want to delete this channel?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_new_shutter">New Channel</string>

    <string name="copy_remote_signal">Copy remote signal</string>
    <string name="copy_signal_text">During the signal copy process you’ll be asked to tap on the up, stop and down buttons on the remote control.</string>
    <string name="start_signal_copy_process">Start signal copy process</string>
    <string name="shutter_name">Shutter name</string>
    <string name="hint_shutter_name">E.g. Living Room Window</string>
    <string name="shutter_id">Shutter ID:</string>
    <string name="press_the_up_button_now">Press the UP button now!</string>
    <string name="try_out_the_up_button">Try out the UP button</string>
    <string name="press_the_stop_button_now">Press the STOP button now!</string>
    <string name="try_out_the_stop_button">Try out the STOP button</string>
    <string name="press_the_down_button_now">Press the DOWN button now!</string>
    <string name="try_out_the_down_button">Try out the DOWN button</string>
    <string name="start_up_button_copy">Up button copy</string>
    <string name="start_stop_button_copy">Stop button copy</string>
    <string name="start_down_button_copy">Down button copy</string>

    <string name="restart">Restart</string>
    <string name="save">Save</string>
    <string name="title_activity_groups">Manage Groups</string>
    <string name="your_groups">Your groups</string>
    <string name="add_new_group">Add new group</string>
    <string name="add">Add</string>
    <string name="group_name">Group name:</string>
    <string name="shutters">Shutters:</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_manage_group">Edit Group</string>
    <string name="group_is_created">Group is created!</string>

    <string name="delete_group_title">Are you sure you want to delete this group?</string>
    <string name="hint_group_name">E.g. Living Room</string>
    <string name="channel_attached">Channel attached to this group!</string>
    <string name="channel_detached">Channel detached from this group!</string>
    <string name="group_is_modified">Group is modified!</string>
    <string name="grouped">Grouped</string>
    <string name="all_shutter">All shutter</string>
    <string name="edit_shutters">Edit shutters</string>
    <string name="saved_groups">Saved groups</string>
    <string name="tap_on_create_new_group">Tap on the \'Add new group\' button to create a new group</string>
    <string name="create_a_new_automation_text">Tap on the \'Add new\' button to create a new automation!</string>
    <string name="there_is_no_automation_text">There is no automation yet!</string>
    <string name="title_activity_create_automation_acivity">New Automation</string>
    <string name="automation_name">Automation Name</string>
    <string name="hint_enter_a_name">Enter a name</string>
    <string name="when">When?</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="set_time">Set Time</string>
    <string name="repeat">Repeat</string>
    <string name="shutter_movement">Shutter movement</string>
    <string name="upwards">Upwards</string>
    <string name="where">Where?</string>
    <string name="downwards">Downwards</string>
    <string name="select_one_or_more_rooms">Select one or more rooms</string>
    <string name="_0_room">%1$d room</string>
    <string name="delete_automation">Delete Automation</string>
    <string name="select_every_day">Select every day</string>
    <string name="deselect_days">Deselect days</string>
    <string name="select_rooms">Select rooms</string>
    <string name="pick_one_room_at_least">You have to pick at least one room!</string>
    <string name="have_to_pick_one_day_at_least">You have to pick at least one day!</string>
    <string name="manage_groups">Manage groups</string>
    <string name="remote">Remote</string>
    <string name="search_device">Search device</string>

    <string name="delete_automation_title">Are you sure you want to delete this automation?</string>
    <string name="every_day">Every day</string>

    <string-array name="days_array">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

</resources>
