<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/group_name"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/group_name_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/elevation_background"
        android:elevation="2dp"
        android:hint="@string/hint_shutter_name"
        android:inputType="text|textNoSuggestions"
        android:paddingLeft="10dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGreyText"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/cancel_add_group"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/button_rounded_red"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/save_group"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_rounded_green"
            android:text="@string/save"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>