<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hu.webandmore.shutter_mvp.ui.automation.CreateAutomationAcivity">

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/automation_name"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/automation_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/elevation_background"
                android:elevation="2dp"
                android:hint="@string/hint_enter_a_name"
                android:inputType="text|textNoSuggestions"
                android:paddingLeft="10dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGreyText"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/when"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/elevation_background"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/sunrise_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/sunrise"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/sunrise_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_check_blue"
                        />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorGreyText" />

                <RelativeLayout
                    android:id="@+id/sunset_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/sunset"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/sunset_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_check_blue"
                        android:visibility="gone"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorGreyText" />

                <RelativeLayout
                    android:id="@+id/set_time_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/set_time"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/set_time_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_check_blue"
                        android:visibility="gone"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/timepicker_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    >

                    <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/repeat"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/daysRecyclerView"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/selectEveryDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/select_every_day"
                android:textColor="@color/colorBlack"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/shutter_movement"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/shutterMovement"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/movement_selector"
                android:textOn="@string/upwards"
                android:textOff="@string/downwards"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/where"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/select_room_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/elevation_background"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/select_one_or_more_rooms"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/countText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/_0_room"
                    android:textColor="@color/colorGreyText"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_arrow_right_black" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/groupsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:background="@drawable/elevation_background"
                android:visibility="gone">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/selected_groups_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="20dp">

                <Button
                    android:id="@+id/cancel_automation"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/button_rounded_red"
                    android:text="@string/cancel"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/save_automation"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/button_rounded_green"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>

